--- a/index.html
+++ b/index.html
@@ -11,19 +11,103 @@
       rel="stylesheet"
     />
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700;100;300&display=swap");
+      :root {
+        --yellow: #ffd602;
+        --red: #d5040a;
+        --blue: #036cb6;
+      }
       body {
+        font-family: "Lato", sans-serif;
         height: 100vh;
         margin: 0;
         overflow: hidden;
       }
       .page {
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         position: relative;
       }
       .container {
         position: absolute;
         z-index: 1;
+        display: grid;
+        grid-template-columns: 55% 45%;
+        grid-template-rows: 20% 50% 30%;
+        grid-template-areas:
+          "nav        aside"
+          "section    aside"
+          "footer     aside";
+        height: 100%;
+        width: 100%;
+      }
+      .navbar {
+        grid-area: nav;
+        display: flex;
+      }
+      .navbar_content {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 0 0 0 80px;
+        animation: 2s navbar 0.5s ease-in-out;
+      }
+      .navbar_content img {
+        width: 50px;
+        height: 50px;
+      }
+      .navbar_content ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 450px;
+        list-style: none;
+        padding: 0;
+      }
+      .main-content {
+        grid-area: section;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        animation: 2s main-content 0.5s ease-in-out;
+        padding-left: 80px;
+      }
+      .main-content p:first-child {
+        font-size: 36px;
+        font-weight: 300;
+        margin: 0 0 -10px 55px;
+      }
+      .main-content h1 {
+        font-size: 48px;
+        font-weight: 700;
+        margin: 0 0 30px;
+      }
+      .main-content p:last-child {
+        font-weight: 300;
+        margin: 0;
+        width: 70%;
+      }
+      @keyframes main-content {
+        0% {
+          transform: translateY(-1000px);
+        }
+        100% {
+          transform: translateY(0px);
+        }
+      }
+      @keyframes navbar {
+        0% {
+          transform: translateY(-200px);
+        }
+        100% {
+          transform: translateY(0px);
+        }
+      }
+      .navbar_content ul a {
+        text-decoration: none;
+        color: var(--red);
+        font-weight: bold;
       }
       .loader {
         width: 100%;
@@ -81,6 +165,168 @@
           transform: scale(1);
         }
       }
+      .side-content {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-area: aside;
+        align-items: center;
+      }
+      .side-content p {
+        transform: rotate(-90deg);
+        font-size: 36px;
+        font-weight: 300;
+        margin: 0;
+        grid-row: 1/2;
+        grid-column: 1/2;
+        opacity: 0;
+        animation-name: side-content-text;
+        animation-duration: 0.5s;
+        animation-delay: 2.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+      }
+      .side-content img {
+        width: 100%;
+        grid-row: 1/2;
+        grid-column: 2/6;
+        animation: 2s side-content-img 0.5s ease-in-out;
+        z-index: 1;
+      }
+      .side-content div {
+        background-color: var(--yellow);
+        grid-column: 4/7;
+        grid-row: 1/2;
+        height: 100%;
+        z-index: 0;
+      }
+      @keyframes side-content-img {
+        0% {
+          transform: translateX(600px);
+        }
+        100% {
+          transform: translateX(0);
+        }
+      }
+      @keyframes side-content-text {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+      .footer {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-end;
+        background-color: var(--yellow);
+        border-radius: 0 80px 0 0;
+        animation: 2.5s footer 0.5s ease-in-out;
+        animation-fill-mode: forwards;
+        transform: translateY(100%);
+      }
+      .footer div img {
+        width: 150px;
+        position: absolute;
+        bottom: 30px;
+        transform: translateY(0px) scale(1);
+        transition: transform 0.9s ease-in-out;
+      }
+      .footer div:hover img {
+        cursor: pointer;
+        transform: translateY(-10px) scale(1.2);
+        transition: transform 0.5s ease-in-out;
+      }
+      .footer div {
+        background-color: var(--blue);
+        width: 150px;
+        height: 40%;
+        border-radius: 20px 20px 0 0;
+        display: flex;
+        justify-content: center;
+      }
+      @keyframes footer {
+        0% {
+          transform: translateY(100%);
+        }
+        100% {
+          transform: translateY(0);
+        }
+      }
+      .hidden {
+        display: none !important;
+      }
+      .visible {
+        display: grid;
+      }
+      .modal {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        z-index: 3;
+        display: grid;
+        place-items: center;
+      }
+      .modal-container {
+        background: #fff;
+        width: 50%;
+        height: 50%;
+        display: grid;
+        place-items: center;
+      }
+      .modal-content--slider {
+        width: 300px;
+        height: 200px;
+        transform-style: preserve-3d;
+      }
+      .cards {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+      .card {
+        background: var(--yellow);
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        transition: transform 0.5s ease;
+        cursor: pointer;
+        display: grid;
+        place-items: center;
+        width: 50%;
+        height: 100%;
+      }
+      #radio1,
+      #radio2,
+      #radio3 {
+        display: none;
+      }
+      #radio1:checked ~ .cards #card1,
+      #radio2:checked ~ .cards #card2,
+      #radio3:checked ~ .cards #card3 {
+        transform: translateX(0) scale(1);
+        opacity: 1;
+        z-index: 1;
+      }
+      #radio1:checked ~ .cards #card2,
+      #radio2:checked ~ .cards #card3,
+      #radio3:checked ~ .cards #card1 {
+        transform: translateX(40%) scale(0.8);
+        opacity: 0.5;
+        z-index: 0;
+      }
+      #radio1:checked ~ .cards #card3,
+      #radio2:checked ~ .cards #card1,
+      #radio3:checked ~ .cards #card2 {
+        transform: translateX(-40%) scale(0.8);
+        opacity: 0.5;
+        z-index: 0;
+      }
+      .cards label img{
+        width: 100%;
+      }
     </style>
   </head>
   <body>
@@ -88,7 +334,7 @@
       <section class="container">
         <nav class="navbar">
           <div class="navbar_content">
-            <img src="" alt="" />
+            <img src="./lego.png" alt="lego" />
             <ul>
               <li><a href="">EXCLUSIVOS</a></li>
               <li><a href="">NUEVOS</a></li>
@@ -109,21 +355,19 @@
         </section>
         <section class="side-content">
           <p>SUPERMAN</p>
-          <img src="" alt="" />
+          <img src="./super-man.png" alt="superman" />
           <div></div>
         </section>
-        <section>
+        <section class="footer">
           <div>
-            <img src="" alt="" />
+            <img id="button1" src="./spiderman.png" alt="sipderman" />
           </div>
           <div>
-            <img src="" alt="" />
+            <img id="button2" src="./robin.png" alt="robin" />
           </div>
-          <div>
-            <img src="" alt="" />
-          </div>
-          <div>
-            <img src="" alt="" />
+
+          <div id="button3">
+            <img src="./batman.webp" alt="batman" />
           </div>
         </section>
       </section>
@@ -132,9 +376,62 @@
         <div></div>
         <div></div>
       </section>
-      <section>
-        <!-- modal -->
+      <section class="modal hidden">
+        <div class="modal-container">
+          <img
+            class="modal-container-close"
+            src="./icons8-macos-close-32.png"
+            alt="x"
+          />
+          <div class="modal-content--slider">
+            <input
+              type="radio"
+              name="slider1"
+              class="card"
+              id="radio1"
+              checked
+            />
+            <input type="radio" name="slider1" class="card" id="radio2" />
+            <input type="radio" name="slider1" class="card" id="radio3" />
+
+            <div class="cards">
+              <label for="radio1" id="card1" class="card">
+                <img src="./spider-man-2_b24c96b3-6d59-496f-815d-32b25eba0141.webp" alt="">
+              </label>
+              <label for="radio2" id="card2" class="card">
+                <img src="./spider-man-3_19f5c510-8059-4477-abf8-42249a5445b7.png" alt="">
+              </label>
+              <label for="radio3" id="card3" class="card">
+                <img src="./spider-man_db8af43d-b692-4986-a385-e645d286e142.png" alt="">
+              </label>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
+  <script>
+    const button1 = document.querySelector("#button1");
+    const button2 = document.querySelector("#button2");
+    const button3 = document.querySelector("#button3");
+    const modal = document.querySelector(".modal");
+    const closeButton = document.querySelector(".modal-container-close");
+    button2.addEventListener("click", () => {
+      modal.classList.remove("hidden");
+      modal.classList.add("visible");
+    });
+    button3.addEventListener("click", () => {
+      modal.classList.remove("hidden");
+      modal.classList.add("visible");
+    });
+
+    button1.addEventListener("click", () => {
+      modal.classList.remove("hidden");
+      modal.classList.add("visible");
+    });
+    closeButton.addEventListener("click", () => {
+      modal.classList.remove("visible");
+      modal.classList.add("hidden");
+    });
+  </script>
 </html>
